# flatlands

./: CMakeLists.txt  README.md  build.sh  imgui.ini
demo/: CMakeLists.txt  main.cpp
demo/include/: Constants.h  DemoApp.h  Entity.h  Renderer.h
demo/include/windows/: DemoSelectWindow.h  PhysicsDemoWindow.h  Window.h
demo/include/windows/collisionDetection/: CapsuleCapsuleCollisionDetectionWindow.h  CapsulePolygonCollisionDetectionWindow.h  CircleCapsuleCollisionDetectionWindow.h  CircleCircleCollisionDetectionWindow.h  CirclePolygonCollisionDetectionWindow.h
demo/src/: DemoApp.cpp  Renderer.cpp
demo/src/windows/: DemoSelectWindow.cpp  PhysicsDemoWindow.cpp  Window.cpp
demo/src/windows/collisionDetection/: CapsuleCapsuleCollisionDetectionWindow.cpp  CapsulePolygonCollisionDetectionWindow.cpp  CircleCapsuleCollisionDetectionWindow.cpp  CircleCircleCollisionDetectionWindow.cpp  CirclePolygonCollisionDetectionWindow.cpp
engine/: CMakeLists.txt
engine/include/: Line.h  RigidBody.h  Transform.h  Vector2.h  World.h
engine/include/colliders/: AABBCollider.h  BoxCollider.h  CircleCollider.h  Collider.h  Collision.h  CollisionAlgorithms.h  CollisionPoints.h  LineCollider.h  PolygonCollider.h
engine/include/collision/: BroadPhaseDetection.h  Collision.h  CollisionAlgorithms.h  CollisionPoints.h  PotentialCollisionPair.h  QuadTree.h
engine/include/core/: Core.h  EngineConstants.h  Logger.h  Math.h  Metrics.h  Time.h  Timer.h
engine/include/math/: AABB.h  Line.h
engine/src/: Line.cpp  RigidBody.cpp  Vector2.cpp  World.cpp
(+24 files in other folders)
